# aegis

./: .env.example  .gitignore  .pre-commit-config.yaml  Makefile  README.md  docker-compose.yml
.github/workflows/: ci.yml  evals.yml
backend/: Dockerfile  generate_cassettes.py  pyproject.toml  test_nvidia.py  test_planner.py
backend/aegis/: agents.py  api_key.py  cassette.py  cost.py  github_mcp_server.py  graph.py  mcp_server.py  memory.py  sandbox.py  server.py  state.py  telemetry.py  time_travel.py  tools.py
backend/curated_runs/: run1.json  run2.json  run3.json  run4.json
backend/evals/: baseline.json  run_eval.py
backend/evals/dataset/issue_1/: check_bug.py  check_math_lib.py  math_lib.py  metadata.json
backend/evals/dataset/issue_2/: check_bug.py  metadata.json  string_utils.py
backend/evals/dataset/issue_3/: check_bug.py  dict_utils.py  metadata.json
backend/evals/dataset/issue_4/: check_bug.py  concat_utils.py  metadata.json
backend/evals/dataset/issue_5/: check_bug.py  math_utils.py  metadata.json
backend/tests/: conftest.py  test_api.py  test_demo.py  test_demo_live.py  test_eval.py  test_graph.py  test_memory.py  test_observability.py  test_run_modes.py  test_safety_governor.py  test_sandbox.py  test_tools.py
backend/tests/cassettes_test/: test_hash.json
frontend/: package-lock.json  package.json  tailwind.config.js  vercel.json
frontend/src/: App.tsx  index.css  store.ts
frontend/src/components/: ApprovalModal.tsx  GraphPane.tsx  Scrubber.tsx  TopBar.tsx  TranscriptPane.tsx
infra/: docker-compose.yml
(+1 files in other folders)
